<resources>
    <string name="app_name">AndroidController</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_settings">Settings</string>

    <string name="startSteering">Rozpocznij sterowanie</string>
    <!-- Strings related to SettingsActivity -->
    <string name="ip_text_view">Wprowadź IP RPI</string>
    <string name="username_text_view">Wprowadź nazwę użytkownika</string>
    <string name="password_text_view">Wprowadź hasło</string>
    <string name="connect_button">Połącz</string>
    <string name="wyslij_komende_button">Wyślij do RPI</string>
    <string name="odpowiedz_text_view">Odpowiedź z RPI:</string>

    <!-- Strings related to SteeringActivity -->
    <string name="on">Włącz</string>
    <string name="off">Wyłącz</string>
    <string name="steering">Sterowanie</string>
</resources>
